--- a/snapchat/styles.css
+++ b/snapchat/styles.css
@@ -34,7 +34,7 @@ body {
   font-size: 22x;
   font-style: normal;
   font-family: "Segoe UI Symbol";
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   color: #333;
 }
 
@@ -44,8 +44,15 @@ body {
   margin-bottom: 20px;
 }
 .login-container label {
+  float: left;
   color: #656b73;
-  font-size: 14px;
+  text-transform: none;
+  letter-spacing: 0;
+  text-align: inherit;
+  height: 16px;
+  font-size: 12px;
+  font-weight: 600;
+  margin-bottom: 5px;
 }
 input[type="email"] {
   width: 93%;
