--- a/snapchat/styles.css
+++ b/snapchat/styles.css
@@ -65,21 +65,29 @@ input[type="email"] {
 .login-container button {
   background-color: #42bfff;
   color: white;
-  border: none;
-  padding: 10px 15px;
   border-radius: 20px;
   cursor: pointer;
-  width: 28%;
+  box-shadow: none;
+  padding: 11px 24px 10px;
   font-size: 14px;
+  line-height: 17px;
+  width: auto;
+  border: 1px solid #d6d6d6;
+  font-weight: 500;
 }
 
-.login-container a {
-  display: block;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  text-decoration: none;
+.login-container .additional-action {
+  margin: 4px 24px 16px;
   font-size: 14px;
-  font-weight: 300;
+  line-height: 20px;
+  text-align: center;
+}
+
+.login-container .additional-action a {
+  color: #0fadff;
+  font-weight: 600;
+  text-decoration: none;
+  border-bottom: 0;
 }
 
 .signup-container {
@@ -88,10 +96,18 @@ input[type="email"] {
   margin-bottom: 170px;
 }
 
+.signup-container a {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  color: #16191c;
+  text-decoration-line: none;
+}
+
 footer {
   background-color: #fff;
   border-top: 1px solid #ddd;
-  padding: 20px 50px;
+  
 }
 
 .footer-container {
@@ -99,6 +115,7 @@ footer {
   display: flex;
   flex-direction: row;
   margin: auto;
+  padding: 20px 50px;
 }
 
 @media (max-width: 768px) {  
@@ -181,4 +198,86 @@ footer {
   text-decoration-color: yellow;
   text-decoration-thickness: 2px;
   text-underline-offset: 4px;
+}
+
+
+.footer-container-sm {
+
+}
+
+.footer-container-sm .section a {
+  text-decoration: none;
+  color: #656b73;
+  border-bottom: 2px solid rgba(0, 0, 0, 0);
+  transition: all .1s ease-in;
+  font-weight: 400;
+  display: block;
+  box-sizing: content-box;
+  border-top: solid 1px #E5E5E5;
+  padding: 10px 40px 10px 58px;
+}
+
+.footer-container-sm .toggle-button {
+  /* background: none;
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  display: flex;
+  gap: 10px;
+  width: 100%;
+  text-align: left; */
+
+  cursor: pointer;
+  border: none;
+  display: flex;
+  gap: 10px;
+  font-size: 14px;
+  background-color: #F8F9FB;
+  border-top: solid 1px #D4D4D4;
+  margin-top: 0;
+  padding: 10px 20px;
+  width: 100%;
+  line-height: 25px;
+  box-sizing: content-box;
+  color: rgba(0, 0, 0, .87);
+  font-weight: 500;
+}
+
+.toggle-button .footer-arrow {
+  width: 28px;
+  height: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.toggle-button.active .footer-arrow {
+  rotate: 90deg;
+}
+
+.footer-column-header {
+  
+}
+
+.footer-container-sm .items {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: none; /* Initially hidden */
+}
+
+.footer-container-sm .language {
+  margin-top: 15px;
+}
+
+.footer-container-sm label {
+  font-size: 14px;
+}
+
+.footer-container-sm select {
+  margin-top: 5px;
+  width: 100%;
+  padding: 5px;
+  font-size: 14px;
 }
