--- a/snapchat/styles.css
+++ b/snapchat/styles.css
@@ -121,6 +121,13 @@ footer {
 @media (max-width: 768px) {  
   .footer-container {
     flex-direction: column;
+    display: none;
+  }  
+} 
+
+@media (min-width: 768px) {  
+  .footer-container-sm {
+    display: none;
   }  
 } 
 
